--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -7,7 +7,8 @@
 @import '../../node_modules/bootstrap/scss/utilities';//引入bootstrap 原始的utilities
 @import './utils/utilitiesbs';//自訂utilities，打開文字斷點
 @import "../../node_modules/bootstrap";
-@import '../../node_modules/material-symbols/outlined.css';//引入material-symbols
+@import '../../node_modules/material-symbols/outlined.css';//引入material-symbols-outlined
+@import '../../node_modules/material-symbols/rounded.css';//引入material-symbols-rounded
 @import '../../node_modules/material-icons/iconfont/material-icons.css';//引入material-icons
 @import '../../node_modules/swiper/swiper-bundle.css';//引入swiper
 
@@ -16,10 +17,12 @@
 @import './utilities';//工具類(margin padding 元件顏色等)
 @import './components/card';//自訂元件
 @import './components/arrow';
+@import './components/btn';
 
 @import './layout/header.scss';
 @import './layout/footer.scss';
 
 
 @import './pages/index.scss';
+@import './pages/product.scss';
 
