--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="container ">
-        <div class="d-flex flex-lg-row flex-column align-items-lg-center justify-content-lg-between align-items-start p-12 px-lg-0 py-lg-15 gap-2 gap-lg-0">
+        <div class="d-flex flex-lg-row flex-column align-items-lg-center justify-content-lg-between align-items-start  py-12 px-9 px-lg-0 py-lg-15 gap-2 gap-lg-0">
             <div class="logo">
                 <p class="mb-0 fs-sm-7 fs-9 fw-light"><a href="index.html" class="text-dark">ALPHABOX+</a></p>
                 <span class="fs-10 fw-semibold font-notoSans">Copyright © 2023 Hexschool.</span>
