--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -13,7 +13,7 @@
             <div class="navbar-nav">
                 <ul
                     class="navbarMain mb-7 mb-xl-0 d-flex flex-xl-row flex-column align-items-center justify-content-center gap-xl-12 gap-7">
-                    <li class="item"><a class="nav-link text-white p-0 text-nowrap" href="#">產品</a></li>
+                    <li class="item"><a class="nav-link text-white p-0 text-nowrap" href="product.html">產品</a></li>
                     <li class="item"><a class="nav-link text-white p-0 text-nowrap" href="#">關於我們</a></li>
                     <li class="item"><a class="nav-link text-white p-0 text-nowrap" href="#">最新消息</a></li>
                     <li class="item"><a class="nav-link text-white font-notoSans p-0 text-nowrap" href="#"
