--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -8,7 +8,7 @@
             <img src="../assets/images/emergency.png" alt="deco">
             <ul class="submenu d-flex flex-lg-row flex-column gap-lg-8 gap-2 mb-0">
                 <li class="item"><a href="#" class="fw-semibold fs-10 text-dark itemLink">關於我們</a></li>
-                <li class="item"><a href="#" class="fw-semibold fs-10 text-dark itemLink">產品資訊</a></li>
+                <li class="item"><a href="product.html" class="fw-semibold fs-10 text-dark itemLink">產品資訊</a></li>
                 <li class="item"><a href="#" class="fw-semibold fs-10 text-dark itemLink">常見問題</a></li>
                 <li class="item"><a href="#" class="fw-semibold fs-10 text-dark itemLink">隱私政策</a></li>
             </ul>
