--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -62,6 +62,13 @@
     }
 }
 
+.userslideCard{
+    height: 351px;
+    @include large{
+      height: 416px;
+    }
+}
+
 .charactCard{
     background-color: #000;
     transition: 0.5s;
@@ -83,3 +90,4 @@
         min-height: 25%;
     }
 }
+
