--- a/assets/scss/pages/_product.scss
+++ b/assets/scss/pages/_product.scss
@@ -1,68 +1,97 @@
-.charactSwiper{
+.charactSwiper {
     //width: 100%;
     height: 100%;
 
 
-    @include large{
+    @include large {
         height: 925px;
-       
+
     }
 
-    .swiper-button-next:after, .swiper-rtl .swiper-button-prev:after{
-        content:"";
-    }
-    .swiper-button-prev:after, .swiper-rtl .swiper-button-next:after{
-        content:"";
+    .swiper-button-next:after,
+    .swiper-button-prev:after {
+        content: "";
     }
 
-    .swiper-button-next{
-        right:28px;
-        @include large{
+    .swiper-button-next {
+        right: 28px;
+
+        @include large {
             right: 32px;
         }
 
-        &:hover{
-            color:$info !important;
+        &:hover {
+            color: $info !important;
         }
     }
-    .swiper-button-prev{
-        left:28px;
-        @include large{
+
+    .swiper-button-prev {
+        left: 28px;
+
+        @include large {
             left: 32px;
         }
 
-        &:hover{
-            color:$info !important;
+        &:hover {
+            color: $info !important;
         }
     }
 
 
 }
 
-.moreScroll{
-    position:relative;
-    width: 109px;
-    height: 109px;
-    @include medium{
+.moreScroll {
+    position: relative;
+    width: 80px;
+    height: 80px;
+
+    @include xxsmall {
+        width: 109px;
+        height: 109px;
+    }
+
+    @include medium {
         width: 196px;
         height: 196px;
     }
-    @include large{
-        
-        position:absolute;
-        bottom:60px;
-        left: 50% ;
+
+    @include large {
+
+        position: absolute;
+        bottom: 60px;
+        left: 50%;
         //padding-bottom: 0;
-        transform: translateX(-50%) ;
+        transform: translateX(-50%);
     }
 
-    .moreScrollCircle{
-    width: 109px;
-    height: 109px;
-    @include medium{
-        width: 196px;
-        height: 196px;
-    }
+    .moreScrollCircle {
+        width: 80px;
+        height: 80px;
 
+        @include xxsmall {
+            width: 109px;
+            height: 109px;
+        }
+
+        @include medium {
+            width: 196px;
+            height: 196px;
+        }
+
+    }
+}
+
+.detail {
+    .textArea {
+        .subtitle {
+            border-bottom: 1px solid transparent;
+            transition: all 0.8s;
+        }
+
+        &:hover {
+            .subtitle {
+                border-bottom: 1px solid $dark;
+            }
+        }
     }
 }
